# pvr.mythtv

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  index.html
cmake/: addon-helpers.cmake
debian/: changelog  control  kodi-pvr-mythtv-krypton.install  rules
download/: index.html
lib/cppmyth/: CMakeLists.txt
lib/kodi/: CMakeLists.txt  refresh_kodi.sh
lib/p8-platform/: CMakeLists.txt
lib/platform/: CMakeLists.txt
manual/: index.html
pvr.mythtv/: addon.xml  addon.xml.in  changelog.txt
pvr.mythtv/resources/: nobroadcasting.ts
pvr.mythtv/resources/language/Dutch/: strings.po
pvr.mythtv/resources/language/English/: strings.po
pvr.mythtv/resources/language/French/: strings.po
pvr.mythtv/resources/language/French (Canada)/: strings.po
pvr.mythtv/resources/language/German/: strings.po
pvr.mythtv/resources/language/Italian/: strings.po
pvr.mythtv/resources/language/Spanish/: strings.po
pvr.mythtv/resources/language/resource.language.en_gb/: strings.po
src/: client.cpp  client.h  nobroadcasting.cpp  nobroadcasting.h  pvrclient-mythtv.cpp  pvrclient-mythtv.h
src/cppmyth/: MythScheduleHelper75.cpp  MythScheduleManager.cpp
